Revert "feat: Kafka 기반 주간 리포트 메일 전송 기능 추가 (#187)"
This reverts commit 6a9a5193d7aed158c07398d9b08333937c380817.